<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".SecondScreen"
    android:gravity="center"
    android:layout_centerInParent="true">

    <ImageView
        android:id="@+id/LogoS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:scaleType="center"
        app:srcCompat="@drawable/Logos" />

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            app:srcCompat="@mipmap/ic_launcher_foreground"
            android:tint="#D58BC34A"
            tools:ignore="UseAppTint"/>

        <EditText
            android:id="@+id/etUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_background"
            android:padding="4dp"
            android:text="@string/etUsuario"
            android:textColor="@color/grayP" />


    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="68dp"
            android:layout_height="match_parent"
            android:scaleType="center"
            app:srcCompat="@mipmap/Map_foreground"
            android:tint="#D58BC34A"
            tools:ignore="UseAppTint"/>

        <EditText
            android:id="@+id/etSedes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/edittext_background"
            android:padding="4dp"
            android:text="@string/etSedes"
            android:textColor="@color/grayP" />
    </TableRow>

    <TextView
        android:id="@+id/tvHuella"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/tvHuella"
        android:textAlignment="center" />

    <ImageButton
        android:id="@+id/Huella"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginTop="20sp"
        android:backgroundTint="#009C27B0"
        android:scaleType="center"
        tools:src="@drawable/img_huella" />

    <TextView
        android:id="@+id/tvAvisoUsu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/tvAvisoUsu"
        android:textAlignment="center" />

</LinearLayout>